restrict invoke time
